--- a/uberClone/package.json
+++ b/uberClone/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^10.0.0"
