--- a/uberClone/package.json
+++ b/uberClone/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.14",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@rnmapbox/maps": "^10.0.15",
     "expo": "^49.0.13",
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -29,7 +31,8 @@
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
